test-cases/final-dump/bad_module_name.exp
Error detected during loading module: bad_module_name
final-dump/bad_module_name.wybe:3:8: Syntax error: unexpected identifier T0
